tests/compile-fail/endianness-multiple.stderr
error: Struct cannot be both big and little endian
 --> tests/compile-fail/endianness-multiple.rs:6:7
  |
6 | #[nom(BigEndian, LittleEndian)] // ERROR: Struct cannot be both big and little endian
  |       ^^^^^^^^^

error: Object cannot be both big and little endian
  --> tests/compile-fail/endianness-multiple.rs:12:10
   |
12 | #[derive(NomLE)] // ERROR: Object cannot be both big and little endian
   |          ^^^^^
   |
   = note: this error originates in the derive macro `NomLE` (in Nightly builds, run with -Z macro-backtrace for more info)
